[package]
name = "krl-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
reqwest = { version = "0.11", features = ["json"] }
serde = "1"
serde_json = "1"
serde_derive = "1"
strum = "0.24"
strum_macros = "0.24"
chrono = "0.4.23"
serde_with = { version = "2.2.0", features = ["chrono"] }
